# minimal-provider-agent-market

./: .env.template  Dockerfile  FIX_README.md  README.md  fix_write_file.patch  litellm.config.yaml  main.py  pyproject.openhands.toml  pyproject.toml  run.sh
src/: __init__.py  config.py  config.py.bak  containers.py  enums.py  market_scan.py  market_scan_process.py  solve_instances.py  solve_instances_process.py
src/agents/: aider.py  aider_modify_repo.py  open_hands.py  prompt_cache.py  raaid.Dockerfile  raaid.py
src/aider_solver/: launch_container.py
src/utils/: __init__.py  agent_market.py  commit_message.py  config.py  constants.py  cost_tracker.py  cost_tracking.py  file_utils.py  git.py  sync_fork.py
src/utils/git_utils/: __init__.py  command_builder.py  core.py  github_api.py  pr_management.py  requirements.txt
src/utils/git_utils/tests/: test_command_builder.py  test_core.py  test_github_api.py  test_pr_management.py
