[tool.poetry]
name = "minimal-provider-agent-market"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "minimal_provider_agent_market"}]

[tool.poetry.dependencies]
python = "^3.12"
docker = "7.1.0"
gitpython = "3.1.43"
httpx = "0.27.2"
loguru = "0.7.2"
pydantic = "^2.7.0"
pydantic-settings = "2.6.1"
pre-commit = "4.0.1"
pygithub = "2.5.0"
python-dotenv = "1.0.1"
ruff = "0.8.0"
openhands-ai = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
